trying to fix missing padding part 2

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,11 +53,12 @@ form{
 		input,
 		select,
 		button{
+			-webkit-appearance: none;
 			box-sizing: border-box !important;
 			display: block;
 			width: 100%;
 			margin: 0;
-			padding: 0.5rem !important;
+			padding: 0.5rem;
 			color: $main-color-inv;
 			background-color: $main-color;
 			border: none;
